namespaces/live-1.cloud-platform.service.justice.gov.uk/hmpps-domain-events-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-domain-events-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "hmpps-domain-events"
    cloud-platform.justice.gov.uk/owner: "HMPPS: hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-domain-events.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/slack-channel: "dps_tech_team"
    cloud-platform.justice.gov.uk/team-name: "dps-tech-team"
